# valdash3

./: .dockerignore  .env.example  .env.production  .eslintrc.json  .npmrc  Anchor.toml  CONTRAST_IMPROVEMENTS.md  Cargo.toml  Dockerfile  README.md  clear_storage.js  coolify.json  docker-compose.yml  index.html  nixpacks.toml  package-lock.json  package.json  roadmap.md  tailwind.config.js  vite.config.ts
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  verify-build.md  vite.config.ts
frontend/src/: App.css  App.tsx  validator_dashboard.json
programs/validator-dashboard/: Cargo.toml
scripts/: verify-program.sh
src/: App-simple.tsx  App.tsx  index.css  main.tsx  polyfills.ts  vite-env.d.ts
src/components/: ApiConfigModal.tsx  EpochProgress.tsx  LastUpdated.tsx  MEVInsights.tsx  NetworkConsensus.tsx  NetworkHealth.tsx  NetworkSelector.tsx  NetworkStatus.tsx  PerformanceMetrics.tsx  QuickStats.tsx  SearcherActivity.tsx  StakeOperations.tsx  StakingRewards.tsx  TabContent.tsx  TabNavigation.tsx  TransactionHistory.tsx  ValidatorKeyInput.tsx  ValidatorOverview.tsx  ValidatorStats.tsx  WalletConnect.tsx
src/constants/: index.ts
src/contexts/: WalletContext.tsx
src/hooks/: useBalance.ts  useMEVData.ts  useTransactions.ts  useValidatorData.ts
src/services/: stakeService.ts  validatorService.ts
src/types/: validator.ts
src/utils/: errorHandler.ts  formatters.ts  jitoClient.ts  premiumDataClient.ts  solanaClient.ts  validation.ts
valdash/: index.html  package.json
(+11 files in other folders)
