[package]
name = "validator-dashboard-backend"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
solana-client = "~1.18.0"
solana-sdk = "~1.18.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }